# tree-sitter-dart

./: .gitignore  Cargo.toml  grammar.js  package.json  tree-sitter-dart.wasm
bindings/rust/: lib.rs
src/: grammar.json  node-types.json
test/corpus/: big_tests.txt  dart.txt  declarations.txt  expressions.txt  flutter.txt  literals.txt  more_expressions.txt  types.txt
