[package]
name = "tree-sitter-dart"
description = "dart grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "dart"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ast-grep/tree-sitter-dart"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.8"

[build-dependencies]
cc = "1.0"
